--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
-    "@prisma/client": "6.15.0",
+    "@prisma/client": "^6.3.1",
     "@react-email/components": "0.5.1",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
@@ -74,7 +74,7 @@
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
-    "prisma": "^6.15.0",
+    "prisma": "^6.3.1",
     "react-email": "4.2.8",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
