--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.1",
+    "@nestjs/bullmq": "^11.0.3",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/jwt": "^11.0.0",
@@ -38,12 +41,17 @@
     "@prisma/client": "^6.3.1",
     "@react-email/components": "0.5.1",
     "bcrypt": "^6.0.0",
+    "bullmq": "^5.58.5",
+    "cache-manager": "^7.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "ioredis": "^5.7.0",
+    "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "nestjs-zod": "^5.0.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "redlock": "5.0.0-beta.2",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.2",
     "rxjs": "^7.8.2",
@@ -61,8 +69,11 @@
     "@swc/core": "^1.13.5",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.3.0",
+    "@types/redlock": "^4.0.7",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.34.0",
