--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "init-seed-data": "ts-node scripts",
+    "create-permissions": "ts-node scripts/create-permissions.ts",
     "email:dev": "email dev",
     "email:build": "email build",
     "email:export": "email export",
