--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@react-email/preview-server": "4.2.8",
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.5",
     "@types/bcrypt": "^6.0.0",
