--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "cache-manager": "^7.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "google-auth-library": "^10.3.0",
+    "googleapis": "^159.0.0",
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "nestjs-zod": "^5.0.0",
+    "otpauth": "^9.4.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "redlock": "5.0.0-beta.2",
