--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ GOOGLE_CLIENT_REDIRECT_URI=http://localhost:3000/oauth-google-callback
 #= Database:
 DATABASE_URL="postgresql://postgres:postgres@localhost:5433/sporta"
 REDIS_URL="redis://localhost:6380"
+
+#= Media
+MAX_FILE_SIZE_BYTES=10485760
+MAX_FILES_UPLOAD=10
