--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "seed": "tsx scripts/seed.ts",
     "init-seed-data": "ts-node scripts",
     "create-permissions": "ts-node scripts/create-permissions.ts",
     "email:dev": "email dev",
@@ -99,6 +100,7 @@
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0"
   },
