feat: handle data owner

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "seed": "tsx scripts/seed.ts",
-    "init-seed-data": "ts-node scripts",
-    "create-permissions": "ts-node scripts/create-permissions.ts",
+    "seed": "tsx scripts/seeds/seed.ts",
+    "init-seed-data": "tsx scripts/seeds/index.ts",
+    "permissions:create": "tsx scripts/permissions/create-permissions.ts",
+    "permissions:venue-owner": "tsx scripts/permissions/add-venue-owner-permissions.ts",
+    "permissions:owner": "tsx scripts/permissions/seed-owner-permissions.ts",
     "email:dev": "email dev",
     "email:build": "email build",
     "email:export": "email export",
