--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "seed": "tsx scripts/seeds/seed.ts",
+    "seed:sports": "tsx scripts/seeds/seed-sports.ts",
     "init-seed-data": "tsx scripts/seeds/index.ts",
     "permissions:create": "tsx scripts/permissions/create-permissions.ts",
     "permissions:venue-owner": "tsx scripts/permissions/add-venue-owner-permissions.ts",
