--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
+    "@payos/node": "^2.0.3",
     "@prisma/client": "^6.3.1",
     "@react-email/components": "0.5.1",
     "bcrypt": "^6.0.0",
