feat: payment checking

--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "scripts": {
     "seed": "tsx scripts/seeds/seed.ts",
     "seed:sports": "tsx scripts/seeds/seed-sports.ts",
+    "seed:provinces": "tsx scripts/seeds/seed-provinces.ts",
+    "seed:provinces:full": "tsx scripts/seeds/seed-provinces-full.ts",
+    "seed:all": "tsx scripts/seeds/seed-all.ts",
     "init-seed-data": "tsx scripts/seeds/index.ts",
     "permissions:create": "tsx scripts/permissions/create-permissions.ts",
     "permissions:venue-owner": "tsx scripts/permissions/add-venue-owner-permissions.ts",
     "permissions:owner": "tsx scripts/permissions/seed-owner-permissions.ts",
+    "permissions:booking-client": "tsx scripts/permissions/add-booking-permissions-client.ts",
+    "permissions:quick-fix": "tsx scripts/permissions/quick-fix-client-booking.ts",
     "email:dev": "email dev",
     "email:build": "email build",
     "email:export": "email export",
