--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,8 @@ REDIS_URL="redis://localhost:6380"
 #= Media
 MAX_FILE_SIZE_BYTES=10485760
 MAX_FILES_UPLOAD=10
+
+#= PayOS Payment Gateway
+PAYMENT_CLIENT_ID=
+PAYMENT_API_KEY=
+PAYMENT_CHECKSUM_KEY=
