--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,14 @@ GOOGLE_REDIRECT_URI=
 GOOGLE_CLIENT_REDIRECT_URI=http://localhost:3000/oauth-google-callback
 
 #= Database:
-DATABASE_URL="postgresql://postgres:postgres@localhost:5433/sporta"
-REDIS_URL="redis://localhost:6380"
+POSTGRES_DB=sporta
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_postgres_password
+DATABASE_URL="postgresql://postgres:your_postgres_password@localhost:5432/sporta"
+
+#= Redis:
+REDIS_PASSWORD=your_redis_password
+REDIS_URL="redis://:your_redis_password@localhost:6379"
 
 #= Media
 MAX_FILE_SIZE_BYTES=10485760
