--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,71 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
     container_name: sporta-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_DB: sporta
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '5433:5432'
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - sporta-app
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   redis:
     image: redis:7-alpine
     container_name: sporta-redis
     restart: unless-stopped
     ports:
-      - '6380:6379'
+      - '6379:6379'
     volumes:
       - redis_data:/data
-    command: ['redis-server', '--requirepass', 'sporta']
+    command: ['redis-server', '--requirepass', '${REDIS_PASSWORD}']
     environment:
-      REDIS_PASSWORD: sporta
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    networks:
+      - sporta-app
+    healthcheck:
+      test: ['CMD', 'redis-cli', '--raw', 'incr', 'ping']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: sporta-app
+    restart: unless-stopped
+    ports:
+      - '${APP_PORT:-4000}:4000'
+    environment:
+      NODE_ENV: production
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      REDIS_URL: redis://:${REDIS_PASSWORD}@redis:6379
+    env_file:
+      - .env
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    networks:
+      - sporta-app
+    volumes:
+      - ./uploads:/app/uploads
+    command: sh -c "npx prisma migrate deploy && pnpm start:prod"
+
+networks:
+  sporta-app:
+    driver: bridge
 
 volumes:
   postgres_data:
