fix: fix filter for users

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "seed:provinces:full": "tsx scripts/seeds/seed-provinces-full.ts",
     "seed:all": "tsx scripts/seeds/seed-all.ts",
     "seed:venues": "tsx scripts/seeds/seed-venue-owners.ts",
+    "seed:venues:fixed": "tsx scripts/seeds/seed-venue-owners-fixed.ts",
+    "fix:wards": "tsx scripts/seeds/fix-seed-hcm-wards.ts",
+    "fix:venues": "tsx scripts/seeds/fix-venue-locations.ts",
+    "fix:hocmon": "tsx scripts/seeds/move-to-hoc-mon.ts",
+    "fix:distribute": "tsx scripts/seeds/distribute-venues.ts",
+    "check:venues": "tsx scripts/seeds/check-venue-locations.ts",
     "init-seed-data": "tsx scripts/seeds/index.ts",
     "permissions:create": "tsx scripts/permissions/create-permissions.ts",
     "permissions:venue-owner": "tsx scripts/permissions/add-venue-owner-permissions.ts",
