--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_PORT=4000
 API_PREFIX=
 APP_CORS_ORIGIN=*
 
+#= Frontend URL (for payment callbacks)
+FRONTEND_URL=http://localhost:3000
+
 #= JWT
 SECRET_API_KEY=
 ACCESS_TOKEN_EXPIRES_IN=
