--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,11 +49,10 @@ jobs:
       - name: Build application
         run: pnpm build
 
-  build-and-deploy:
-    name: Build & Deploy
+  build-and-push-image:
+    name: Build & Push Docker Image
     needs: build-and-test
-    timeout-minutes: 480
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     env:
       ENV_FILE: ${{ secrets.ENV_FILE }}
@@ -68,11 +67,55 @@ jobs:
           printf '%s' "$ENV_FILE" > .env
           chmod 600 .env
 
-      - name: Build and deploy with Docker Compose (BuildKit + plain progress)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/sporta-be:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/sporta-be:buildcache,mode=max
+
+  deploy:
+    name: Deploy to VPS
+    needs: build-and-push-image
+    timeout-minutes: 480
+    runs-on: self-hosted
+    env:
+      ENV_FILE: ${{ secrets.ENV_FILE }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Create env file
+        if: ${{ env.ENV_FILE != '' }}
         run: |
-          export DOCKER_BUILDKIT=1
-          docker compose -f docker-compose.yml build --progress=plain
-          docker compose -f docker-compose.yml up -d --remove-orphans
+          printf '%s' "$ENV_FILE" > .env
+          chmod 600 .env
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Pull latest image
+        run: docker pull ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest
+
+      - name: Tag image for docker-compose
+        run: docker tag ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest sporta-be-app
+
+      - name: Deploy with Docker Compose
+        run: |
+          docker compose -f docker-compose.yml up -d --no-build
 
       - name: Clean up old Docker images
         run: docker image prune -af
