--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,10 +105,16 @@ jobs:
           chmod 600 .env
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        run: |
+          for i in {1..3}; do
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin && break || sleep 10
+          done
 
       - name: Pull latest image
-        run: docker pull ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest
+        run: |
+          for i in {1..3}; do
+            docker pull ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest && break || sleep 10
+          done
 
       - name: Tag image for docker-compose
         run: docker tag ${{ secrets.DOCKER_USERNAME }}/sporta-be:latest sporta-be-app
